# MLOPS_Final

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  MLproject  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: _smtp_test_dag.py  data_pipeline_dag.py  drift_monitor_dag.py  drift_monitor_dags.py  simulator_dag.py  training_dag.py
data/processed/: city_encoding.yaml
docker/airflow/: Dockerfile  requirements.txt
docker/api/: Dockerfile  requirements.txt
docker/frontend/: Dockerfile  Home.py  requirements.txt
docker/mlflow/: Dockerfile
docs/: ai_declaration_statement.md  demo_runbook.md  project_report.md  report_submission.md  user_manual.md
docs/architecture/: architecture.md  architecture.mmd
docs/hld/: HLD.md
docs/lld/: LLD.md
docs/test_plan/: test_plan.md  test_report_unit.txt
docs/user_manual/: user_manual.md
frontend/: Home.py  api_client.py
frontend/pages/: 1_Predict.py  2_Feedback.py  3_Pipeline.py
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: init.sh  init_databases.sh
src/api/: instrumentation.py  main.py  model_loader.py  predictions_db.py  schemas.py
src/data/: ingest.py  validate.py
src/features/: baseline_stats.py  feedback_merge.py  transform.py
src/models/: dataset.py  nn_trainer.py  register.py  xgboost_trainer.py
src/monitoring/: decay_check.py  drift.py  simulator.py
src/utils/: config.py  logging.py  mlflow_helpers.py
tests/integration/: test_api.py
tests/unit/: test_dataset.py  test_drift.py  (+1 more)
(+2 files in other folders)
