[project]
name = "aqi-mlops"
version = "0.1.0"
description = "AQI regression with full MLOps lifecycle"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["airflow/logs", "notebooks", "mlruns", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, isolated",
    "integration: require docker services",
]